--- a/themes/AllinOne/layouts/partials/footer.html
+++ b/themes/AllinOne/layouts/partials/footer.html
@@ -33,7 +33,7 @@
     {{ end }}
 
      {{ if $.Site.Params.researchgate }}
-      <a href="{{ $.Site.Params.researchgate }}" target="_blank" rel="noopener"><i class="fab fa-researchgate-f mr-3" aria-hidden="true"></i></a>
+      <a href="{{ $.Site.Params.researchgate }}" target="_blank" rel="noopener"><i class="fab fa-researchgate mr-3" aria-hidden="true"></i></a>
     {{ end }}
     
     {{ if $.Site.Params.email }}
