--- a/themes/AllinOne/layouts/partials/page-header.html
+++ b/themes/AllinOne/layouts/partials/page-header.html
@@ -119,7 +119,10 @@
             {{ if $.Site.Params.px500 }}
                 <a href="{{ $.Site.Params.px500 }}" target="_blank" rel="noopener"><i class="fab fa-500px pr-1" aria-hidden="true"></i></a>
             {{ end }}
-    
+            
+            {{ if $.Site.Params.researchgate }}
+              <a href="{{ $.Site.Params.researchgate }}" target="_blank" rel="noopener"><i class="fab fa-researchgate mr-3" aria-hidden="true"></i></a>
+            {{ end }}
         
             {{ if $.Site.Params.email }}
                 <a href="mailto:{{ $.Site.Params.email }}"><i class="far fa-envelope-open pr-1" aria-hidden="true"></i></a>
