--- a/themes/AllinOne/layouts/partials/homepage-header.html
+++ b/themes/AllinOne/layouts/partials/homepage-header.html
@@ -123,6 +123,11 @@
                 <a href="{{ $.Site.Params.instagram }}" target="_blank" rel="noopener"><i class="fab fa-instagram pr-1" aria-hidden="true"></i></a>
             {{ end }}
     
+    
+            {{ if $.Site.Params.researchgate }}
+              <a href="{{ $.Site.Params.researchgate }}" target="_blank" rel="noopener"><i class="fab fa-researchgate mr-3" aria-hidden="true"></i></a>
+            {{ end }}
+            
             {{ if $.Site.Params.px500 }}
                 <a href="{{ $.Site.Params.px500 }}" target="_blank" rel="noopener"><i class="fab fa-500px pr-1" aria-hidden="true"></i></a>
             {{ end }}
