--- a/themes/AllinOne/layouts/partials/page-header.html
+++ b/themes/AllinOne/layouts/partials/page-header.html
@@ -121,7 +121,7 @@
             {{ end }}
             
             {{ if $.Site.Params.researchgate }}
-              <a href="{{ $.Site.Params.researchgate }}" target="_blank" rel="noopener"><i class="fab fa-researchgate mr-3" aria-hidden="true"></i></a>
+              <a href="{{ $.Site.Params.researchgate }}" target="_blank" rel="noopener"><i class="fab fa-researchgate pr-1" aria-hidden="true"></i></a>
             {{ end }}
         
             {{ if $.Site.Params.email }}
