--- a/themes/AllinOne/layouts/partials/page-header.html
+++ b/themes/AllinOne/layouts/partials/page-header.html
@@ -4,6 +4,7 @@
 {{ $files := readDir $path  }}
 {{ $files := where $files  "Name" "ne" ".DS_Store" }}
 
+<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 
 <!--Carousel Wrapper-->
 <link rel="stylesheet" href="/path/to/folder/css/academicons.min.css"/>
