--- a/themes/AllinOne/layouts/partials/page-header.html
+++ b/themes/AllinOne/layouts/partials/page-header.html
@@ -119,7 +119,7 @@
             {{ end }}
     
             {{ if $.Site.Params.scholar }}
-                <a href="{{ $.Site.Params.scholar }}" target="_blank" rel="noopener"><i class="ai ai-google-scholar-square ai-3x" aria-hidden="true"></i></a>
+                <a href="{{ $.Site.Params.scholar }}" target="_blank" rel="noopener"><i class="ai ai-google-scholar-square pr-1" aria-hidden="true"></i></a>
             {{ end }}
 
             {{ if $.Site.Params.px500 }}
