--- a/themes/AllinOne/layouts/partials/footer.html
+++ b/themes/AllinOne/layouts/partials/footer.html
@@ -28,6 +28,10 @@
         <a href="{{ $.Site.Params.instagram }}" target="_blank" rel="noopener"><i class="fab fa-instagram mr-3" aria-hidden="true"></i></a>
     {{ end }}
 
+    {{ if $.Site.Params.scholar }}
+    <a href="{{ $.Site.Params.scholar }}" target="_blank" rel="noopener"><i class="ai ai-google-scholar-square pr-1" aria-hidden="true"></i></a>
+    {{ end }}
+    
     {{ if $.Site.Params.px500 }}
         <a href="{{ $.Site.Params.px500 }}" target="_blank" rel="noopener"><i class="fab fa-500px mr-3" aria-hidden="true"></i></a>
     {{ end }}
