--- a/themes/AllinOne/layouts/partials/footer.html
+++ b/themes/AllinOne/layouts/partials/footer.html
@@ -1,5 +1,7 @@
 
 <!--Footer-->
+<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+
 <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
 
